packages/webassemblyjs/test/fixtures/type-errors/store/exec.tjs
it("should throw an error during instantiation when type checking fails", () => {
  assert.throws(
    () => WebAssembly.instantiateFromSource(watmodule),
    "Expected type i64 but got i32"
  );
});
